--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,7 @@
   :root {
     
     /* Global Variables */
-    --main-color: white;
+    --main-color: #93BEF6;
 
 
     /* Component Specific Variables */
