--- a/src/components/dashboard/dashboard.module.css
+++ b/src/components/dashboard/dashboard.module.css
@@ -2,12 +2,12 @@
     width: 100%;
     height: 100vh;
     background-color: #93BEF6;
-    margin-top: 100px;
     display: flex;
     justify-content: space-around;
     flex-direction: row;
     align-items: center;
     padding: 30px 0px;
+    margin-top: 60px;
 }
 
 .dashboard{
@@ -20,13 +20,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+      background-color: #DEF386;
 }
 
 .authorName{
   margin-bottom: 20px;
   box-shadow: 0px 10px 10px 0px #e53e1d50;
-  padding: 10px;
+  padding: 20px;
   transition: 0.5s;
+  background-color: white;
+   border-radius: 100px;
 }
 
 .authorName:hover{
@@ -35,15 +38,36 @@
 }
 
 .imgContainer{
+  padding: 40px;
     width: 70%;
     height: 90%;
     background-color: white;
     border-radius: 100px;
     box-shadow: 0px 10px 10px 0px #e53e1d50;
-    font-size: 200px;
     overflow: auto;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    background-color: #DF4B4A;
 }
 
 .imgContainer::-webkit-scrollbar{
     display: none;
 }
+
+.image{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-position:center;
+  border-radius: 100px;
+}
+
+.button{
+  background-color: white;
+  color: black;
+  border: none;
+
+}
+
+
+
