--- a/src/components/navigation/navigation.module.css
+++ b/src/components/navigation/navigation.module.css
@@ -1,13 +1,16 @@
 .navigation{
     height: 80px;
     background-color: #93BEF6;
-    padding: 10px;
+    padding: 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: #DEF386;
     z-index: 1000;
-    position: relative;
+    position: fixed;
+    width: 100%;
+    top: 0px;
+    box-shadow: 0px 10px 10px 0px #e53e1d50;
 }
 
 .logo{
@@ -29,10 +32,11 @@
     justify-content: space-around;
     padding: 10px;
     box-shadow: 0px 10px 10px 0px #e53e1d50;
-    position: absolute;
     width: 100%;
-    top: -80px;
-    z-index: 0;
+    z-index: 100;
+    top: -300px;
+    position: fixed;
+    transition: 0.5s;
 }
 
 .down{
